c++: missing SFINAE with pointer subtraction [PR78173]

This fixes a missed SFINAE when subtracting pointers to an incomplete
type.

gcc/cp/ChangeLog:

	PR c++/78173
	* typeck.c (pointer_diff): Use complete_type_or_maybe_complain
	instead of complete_type_or_else.

gcc/testsuite/ChangeLog:

	PR c++/78173
	* g++.dg/cpp2a/concepts-pr78173.C: New test.